--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.datasource.url=jdbc:postgresql://srikandan.tk:5432/postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/empDb
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
